<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:srcCompat="@tools:sample/avatars[1]"
            android:contentDescription="@string/avatarDescription" />

        <TextView
            android:id="@+id/fio"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <TextView
            android:id="@+id/position"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fio" />

        <TextView
            android:id="@+id/department"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/position" />

        <ImageView
            android:id="@+id/phoneView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/department"
            app:srcCompat="@drawable/telephone"
            android:contentDescription="@string/phoneViewDescription" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toEndOf="@+id/phoneView"
            app:layout_constraintTop_toBottomOf="@+id/department" />

        <TextView
            android:id="@+id/email"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.605"
            app:layout_constraintStart_toEndOf="@+id/atView"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/location"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/locationPoint"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <ImageView
            android:id="@+id/atView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneView"
            app:srcCompat="@drawable/at"
            android:contentDescription="@string/atViewDescription" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="376dp"
            android:layout_height="68dp"
            android:layout_marginTop="20dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location">

            <LinearLayout
                android:id="@+id/awards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/vkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/vkButtonDescription"
            app:layout_constraintStart_toEndOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/department"
            app:srcCompat="@drawable/vk"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/telegramButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:background="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/vkButton"
            app:layout_constraintTop_toBottomOf="@+id/department"
            app:srcCompat="@drawable/telegram"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/telegramButtonDescription" />

        <ImageButton
            android:id="@+id/whatsappButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"
            android:background="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/telegramButton"
            app:layout_constraintTop_toBottomOf="@+id/department"
            app:srcCompat="@drawable/whatsapp"
            tools:ignore="TouchTargetSizeCheck"
            android:contentDescription="@string/whatsappButtonDescription" />

        <ImageButton
            android:id="@+id/callButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/callButtonDescription"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/messageButton"
            app:srcCompat="@drawable/call"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/messageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/messageButtonDescription"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/message"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/locationPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/atView"
            app:srcCompat="@drawable/location"
            android:contentDescription="@string/locationPointDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>